# MODULE.bazel

# Choose the most recent version available at
# https://registry.bazel.build/modules/abseil-cpp.
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "fmt", version = "11.1.4")
bazel_dep(name = "rules_cc", version = "0.0.17")
