[package]
name = "project_euler"
version = "0.1.0"
edition = "2024"
authors = ["Pietro F. Maggi <pfm@pietromaggi.com"]
description = "Solutions for Project Euler problems in Rust"

[dependencies]
bit-vec = "0.8.0"
# None for now, we may need 'num-bigint' if a problem exceeds u128.

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
