[package]
name = "project_euler"
version = "0.1.0"
edition = "2024"
authors = ["Pietro F. Maggi <pfm@pietromaggi.com"]
description = "Solutions for Project Euler problems in Rust"
default-run = "project_euler"

[dependencies]
bit-vec = "0.8.0"
inventory = "0.3.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
