load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//test:__pkg__"])

cc_library(
  name = "problems",
  srcs = glob(["p_*.cc"]),
  hdrs = glob(["*.h"]) # ["euler.h", "iota_view.h"],
)

cc_binary(
  name = "euler",
  srcs = ["euler.cc"],
  deps = [
    "@fmt//:fmt",
    ":problems",
  ]
)
